[gd_scene format=3]

[ext_resource type="PackedScene" uid="uid://c8qxqkj5xnvfl" path="res://scenes/vehicles/drift_car.tscn" id="1_drift_car"]
[ext_resource type="Script" path="res://scripts/test_track.gd" id="2_test_track"]
[ext_resource type="Script" path="res://scripts/follow_camera.gd" id="3_follow_camera"]
[ext_resource type="PackedScene" path="res://kenney_car-kit/Models/GLB format/cone.glb" id="4_cone"]
[ext_resource type="PackedScene" path="res://kenney_city-kit-roads/Models/GLB format/road-straight.glb" id="road_straight"]
[ext_resource type="PackedScene" path="res://kenney_city-kit-roads/Models/GLB format/road-straight-barrier.glb" id="road_straight_barrier"]
[ext_resource type="PackedScene" path="res://kenney_city-kit-roads/Models/GLB format/road-curve-barrier.glb" id="road_curve_barrier"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.2, 0.4, 0.8, 1)
sky_horizon_color = Color(0.6, 0.7, 0.9, 1)
ground_bottom_color = Color(0.2, 0.3, 0.2, 1)
ground_horizon_color = Color(0.4, 0.5, 0.4, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.6, 0.6, 1)
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grass"]
albedo_color = Color(0.25, 0.45, 0.2, 1)
roughness = 0.95

[sub_resource type="BoxMesh" id="BoxMesh_grass"]
material = SubResource("StandardMaterial3D_grass")
size = Vector3(100, 0.1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_grass"]
size = Vector3(100, 0.1, 100)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cone"]
height = 0.4
radius = 0.15

[node name="RoadCircuit" type="Node3D"]
script = ExtResource("2_test_track")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="GroundMesh" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_grass")

[node name="GroundCollision" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_grass")

[node name="Roads" type="Node3D" parent="."]

[node name="Seg1_0" parent="Roads" instance=ExtResource("road_straight_barrier")]

[node name="Seg1_1" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Seg1_2" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Seg1_3" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Turn1" parent="Roads" instance=ExtResource("road_curve_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="Seg2_1" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 1, 0, -4)

[node name="Seg2_2" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 2, 0, -4)

[node name="Seg2_3" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 3, 0, -4)

[node name="Seg2_4" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 4, 0, -4)

[node name="Turn2" parent="Roads" instance=ExtResource("road_curve_barrier")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 5, 0, -4)

[node name="Seg3_1" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -3)

[node name="Seg3_2" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -2)

[node name="Seg3_3" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -1)

[node name="Seg3_4" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="Turn3" parent="Roads" instance=ExtResource("road_curve_barrier")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 5, 0, 1)

[node name="Seg4_1" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 4, 0, 1)

[node name="Seg4_2" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 3, 0, 1)

[node name="Seg4_3" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 2, 0, 1)

[node name="Seg4_4" parent="Roads" instance=ExtResource("road_straight_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 1, 0, 1)

[node name="Turn4" parent="Roads" instance=ExtResource("road_curve_barrier")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 1)

[node name="Cones" type="Node3D" parent="."]

[node name="Cone1" type="RigidBody3D" parent="Cones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.2, -4)
mass = 0.5

[node name="Model" parent="Cones/Cone1" instance=ExtResource("4_cone")]

[node name="Collision" type="CollisionShape3D" parent="Cones/Cone1"]
shape = SubResource("CylinderShape3D_cone")

[node name="Cone2" type="RigidBody3D" parent="Cones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.2, -1.5)
mass = 0.5

[node name="Model" parent="Cones/Cone2" instance=ExtResource("4_cone")]

[node name="Collision" type="CollisionShape3D" parent="Cones/Cone2"]
shape = SubResource("CylinderShape3D_cone")

[node name="Cone3" type="RigidBody3D" parent="Cones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.2, 1)
mass = 0.5

[node name="Model" parent="Cones/Cone3" instance=ExtResource("4_cone")]

[node name="Collision" type="CollisionShape3D" parent="Cones/Cone3"]
shape = SubResource("CylinderShape3D_cone")

[node name="Player1Car" parent="." instance=ExtResource("1_drift_car")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 10, 8)
fov = 60.0
script = ExtResource("3_follow_camera")
target_path = NodePath("../Player1Car")
follow_speed = 8.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, 10, 30, 10)
light_color = Color(1, 0.98, 0.95, 1)
light_energy = 1.2
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DebugUI" type="CanvasLayer" parent="."]

[node name="SpeedLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Speed: 0 m/s"

[node name="DriftLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
text = "Drift Charge: 0%"

[node name="BoostLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 110.0
text = "Boost: None"
